[MISC] Added a small presentation with the current solution and added a tag-counter to the streaming application.