@@ -11,7 +11,7 @@ How to Run
 Build fat jar: `sbt assembly`.
 
 Run `sudo docker-compose build`.
-The NiFi container for loading the twitter-feed into the application requires a flow-congiruation to be present in the conf-folder. (/conf/nifi) This file however contains the encrypted passwords for the twitter-application and is therefore ignored from the git-pushes.
+The NiFi container for loading the twitter-feed into the application requires a flow-configuration to be present in the conf-folder. (/conf/nifi) This file however contains the encrypted passwords for the twitter-application and is therefore ignored from the git-pushes. Remove the copy part from the dockerfile and add you own processors in the GUI (localhost:9092/nifi)
 
 Run `sudo docker-compose run --rm --service-ports spark`.
 This will besides the spark-container, also start the docker-containers 'called' kafka and nifi.
@@ -27,3 +27,6 @@ spark-submit \
   --master local[*] \
   --class nl.marije.kafkaspark.WordCountApplication kafka-spark-streaming.jar
 ```
+
+If you have problem with the build of the spark-streaming application you might want to try: 
+`export SBT_OPTS="-XX:+CMSClassUnloadingEnabled -XX:PermSize=512M -XX:MaxPermSize=1024M"`
